fix(tdesign-demo): 修正TDesign组件路径配置，使用标准的npm包路径引用方式

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/logs/logs",
     "pages/wrong-question-list/index",
-    "pages/add-wrong-question/index"
+    "pages/add-wrong-question/index",
+    "pages/tdesign-demo/index"
   ],
   "window": {
     "navigationBarTextStyle": "black",
